Re-fixed. Appeared different on chrome and ie. worried that it looks different on firefox. Have to check.

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ a{
 }
 
 #logo_area{
-	margin-right: 490px;
+	margin-right: 480px;
 }
 
 #logo_over{
